# roguecowboy

./: .gitignore  Cargo.toml  bevy_game.js  build-web.sh  clippy.toml  index.html  readme.md
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/shaders/: glyph.wgsl
notes/: map.txt
src/: camera.rs  glyph.rs  main.rs  player.rs  projection.rs  save.rs  text.rs
src/assets/: crt-shader.glsl
src/common/: cp437.rs  math.rs  mod.rs  perlin.rs  rand.rs
src/common/algorithm/: astar.rs  distance.rs  mod.rs
src/common/structure/: grid.rs  grid3d.rs  mod.rs  priority_queue.rs
src/rendering/: colors.rs  glyph.rs  mod.rs  text.rs
src/ui/: mod.rs  ui_box.rs  viewports.rs
src/world/: chunk_gen.rs  map.rs  mod.rs  snapshot.rs  zone_gen.rs
src/world/builders/: common.rs  mod.rs  simple_zone.rs  zone_builder.rs
