[package]
name = "roguecowboy"
version = "0.1.0"
edition = "2024"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking", "file_watcher"] }
ron = "0.8.1"
serde = { version = "1.0.216", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
web-sys = { version = "0.3.77", features = ["Storage", "Window"] }
ordered-float = "5.0.0"
fastnoise-lite = "1.1.1"
